--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.12",
+    "@next/font": "^13.0.0",
+    "@svgr/webpack": "^6.5.1",
     "framer-motion": "^7.6.1",
     "next": "13.0.0",
     "react": "18.2.0",
+    "react-awesome-button": "^7.0.4",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "sass": "^1.55.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
