--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-awesome-button": "^7.0.4",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-lottie": "^1.2.3",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6"
   },
