--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.10.12",
     "@next/font": "^13.0.0",
     "@svgr/webpack": "^6.5.1",
@@ -19,7 +22,6 @@
     "react": "18.2.0",
     "react-awesome-button": "^7.0.4",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0",
     "react-lottie": "^1.2.3",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6"
