--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-awesome-button": "^7.0.4",
     "react-dom": "18.2.0",
     "react-lottie": "^1.2.3",
+    "react-slick": "^0.29.0",
     "sass": "^1.55.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
