fix(HomeScreen): coreeções em textos e imagens[3]

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,4 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": { "avoidEscape": true, "quotes": "off" }
+  "extends": "next/core-web-vitals"
+  // "rules": { "avoidEscape": true, "quotes": "off" }
 }
